2004-12-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (inforef): try to explain possible uses more
	thoroughly.
	From: Luc Teirlinck, 13 Dec 2004 21:45:58 -0600.

	* doc/texinfo.txi (pxref): more explanation.
	* doc/info-stnd.texi (Basic Windows): put pxref in parens.
	help-texinfo mail from adl, 13 Dec 2004 17:07:50 +0100.

2004-12-13  Andreas Schwab  <schwab@suse.de>

	* info/echo-area.c (DECLARE_INFO_COMMAND): Add intermediate cast
	to avoid warning.
	* info/infokey.c (compile): Likewise.
	* info/session.c (forward_move_node_structure): Likewise.
	(DECLARE_INFO_COMMAND): Likewise.

	* makeinfo/makeinfo.c (init_paragraph): Don't use free_and_clear
	to avoid strict aliasing issue.

	* makeinfo/cmds.c (cm_center): Avoid strict aliasing issue.

2004-12-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Cross-reference Command Expansion): add
	@euro{} -> U+20AC.  texinfo-pretest mail from Patrice,
	12 Dec 2004 23:49:50 +0100.

2004-12-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (makeinfo options): don't be so suggestive about
	skipping xref validation.
	emacs-devel mail from: Luc Teirlinck, 12 Dec 2004 13:02:11 -0600.

2004-12-08  Karl Berry  <karl@gnu.org>

	* pretest version 4.7.91.

	* info/echo-area.c, info/infokey.c, info/session.c: omit useless
	casts to intptr_t, since we're just casting to (void *) next.
	intptr_t is not defined with gcc 3.04 on Tru64 Unix V5.1
	(This whole vararg stuff needs to be redone correctly.)
	Report from: Svend Tollak Munkejord (via te)
        8 Dec 2004 17:15:17 +0100.	

	* doc/texinfo.txi (ref): rewrite last two redundant paragraphs.

2004-12-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Macro Details): document @c kludge in macro
	definitions to work around some newline problems.  (From Werner.)

2004-12-05  Karl Berry  <karl@gnu.org>

	* makeinfo/html.c (add_escaped_anchor_name): prefix g_t if the
	nodename begins with a nonletter.  Ugh.
	* doc/texinfo.txi (HTML Xref Node Name Expansion): document this.